@@ -13,52 +13,40 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package com.redhat.parodos.examples.simple;
+package com.redhat.parodos.examples.continued.complex;
 
-import com.redhat.parodos.workflow.consts.WorkFlowConstants;
 import com.redhat.parodos.workflow.task.WorkFlowTaskOutput;
-import com.redhat.parodos.workflow.task.infrastructure.BaseInfrastructureWorkFlowTask;
+import com.redhat.parodos.workflow.task.checker.BaseWorkFlowCheckerTask;
 import com.redhat.parodos.workflow.task.parameter.WorkFlowTaskParameter;
-import com.redhat.parodos.workflow.task.parameter.WorkFlowTaskParameterType;
 import com.redhat.parodos.workflows.work.DefaultWorkReport;
 import com.redhat.parodos.workflows.work.WorkContext;
 import com.redhat.parodos.workflows.work.WorkReport;
 import com.redhat.parodos.workflows.work.WorkStatus;
-import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 
+import java.util.Collections;
+import java.util.List;
+
 /**
- * logging task execution
+ * A simple example of a WorkFlowChecker that always returns true
  *
  * @author Luke Shannon (Github: lshannon)
- * @author Richard Wang (Github: richardw98)
- * @author Annel Ketcha (Github: anludke)
  */
-
 @Slf4j
-public class LoggingWorkFlowTask extends BaseInfrastructureWorkFlowTask {
-
+public class MockApprovalWorkFlowCheckerTask extends BaseWorkFlowCheckerTask {
     @Override
-    public WorkReport execute(WorkContext workContext) {
-        log.info("Writing a message to the logs from: {}", getName());
-        if (getGetWorkFlowChecker() != null) {
-            workContext.put(WorkFlowConstants.WORKFLOW_CHECKER_ID, getGetWorkFlowChecker().getName());
-        }
-        return new DefaultWorkReport(WorkStatus.COMPLETED, workContext);
+    public WorkReport checkWorkFlowStatus(WorkContext context) {
+        log.info("Mocking a successful workflow checker task");
+        return new DefaultWorkReport(WorkStatus.COMPLETED, context);
     }
 
     @Override
     public List<WorkFlowTaskParameter> getWorkFlowTaskParameters() {
-        return List.of(WorkFlowTaskParameter.builder()
-                .key("api-server")
-                .description("The api server")
-                .type(WorkFlowTaskParameterType.URL)
-                .optional(false)
-                .build());
+        return Collections.emptyList();
     }
 
     @Override
     public List<WorkFlowTaskOutput> getWorkFlowTaskOutputs() {
-        return List.of(WorkFlowTaskOutput.OTHER);
+        return Collections.emptyList();
     }
 }
